--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
                 <a href="/"  class="logo">WebStudio</a>
                 <nav >
                     <ul class="nav-buttons">
-                        <li><a href="#" class="link-buttons">Porfolio</a></li>
-                        <li><a href="#"  class="link-buttons">Estudio</a></li>
+                        <li><a href="./index.html" class="link-buttons">Porfolio</a></li>
+                        <li><a href="./goit-markup-hw-02/portafolio.html"  class="link-buttons">Estudio</a></li>
                         <li><a href="#" class="link-buttons">Contactos</a></li>
                     </ul>
                 </nav>
