--- a/goit-markup-hw-02/portafolio.html
+++ b/goit-markup-hw-02/portafolio.html
@@ -14,7 +14,7 @@
             <a href="/"  class="logo">WebStudio</a>
             <nav >
                 <ul class="nav-buttons">
-                    <li><a href="#" class="link-buttons" class="active" >Porfolio</a></li>
+                    <li><a href="../index.html" class="link-buttons" class="active" >Porfolio</a></li>
                     <li><a href="#"  class="link-buttons">Estudio</a></li>
                     <li><a href="#" class="link-buttons">Contactos</a></li>
                 </ul>
