--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                         <li><a href="#" class="link-buttons">Contactos</a></li>
                     </ul>
                 </nav>
-                <ul >
-                    <li><a href="#"  class="link-buttons" class="contacts-link" >info@devstudio.com</a></li>
-                    <li><a href="#" class="link-buttons" class="contacts-link" >+52 55 5529 6000</a></li>
+                <ul  class="contacts-link">
+                    <li><a href="#"  class="link-buttons">info@devstudio.com</a></li>
+                    <li><a href="#" class="link-buttons">+52 55 5529 6000</a></li>
                 </ul>
             </div>
             <div>
