--- a/goit-markup-hw-02/portafolio.html
+++ b/goit-markup-hw-02/portafolio.html
@@ -111,15 +111,15 @@
         <div class="contacts-footer">
             <a href="/"  class="logo">WebStudio</a>
             <ul>
-                <li>
+                <li class="link-buttons">
                     Calz. Ticomán 500, Ciudad de Mexico, CDMX, Mexico
                 </li>
                 <li>
-                    <a href="#" target="_blank" class="contacts-link
+                    <a href="#" target="_blank" class="contacts-link link-buttons
                     " >info@example.com</a>
                 </li>
                 <li>
-                    <a href="#" target="_blank" class="contacts-link
+                    <a href="#" target="_blank" class="contacts-link link-buttons
                     " >+52 55 5529 6000</a>
                 </li>
             </ul>
